# DeckyFileServer

./: .gitignore  LICENSE  Makefile  README.md  certs  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js  web
.github/: FUNDING.yml
DeckyFileServer/: README.md  package.json  plugin.json
backend/: Cargo.toml  Dockerfile  build-docker.sh  build.sh
backend/src/: args.rs  error.rs  go.mod  go.sum  main.go  main.rs  run.sh
backend/src/api/: mod.rs  routes_browse.rs  routes_root.rs
backend/src/logger/: logger.go
backend/src/server/: server.go
backend/src/server/certs/: cert.pem  key.pem
backend/src/server/static/: htmx.js  index.css
backend/src/server/templates/: files.html  index.html  menu-items.html  upload.html
backend/src/static/: index.css
backend/src/templates/: files.html  index.html  menu-items.html
backend/src/thumbnail/: thumbnail.go
backend/src/thumbnail/static/: index.css
defaults/web/: index.html
defaults/web/assets/: index-38b2261a.js  index-3d425eba.js  index-5eee928b.css  index-92a529a9.js  index-9f218673.js  index-d4fcc183.js  index-ef9969de.css
src/: constants.ts  index.tsx  types.ts
src/components/: Content.tsx  SettingsPage.tsx  WarningModal.tsx
ui/: dev_server.py  index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/www/: index.css  index.html  index.js
