[package]
name = "deckyfileserver-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.10.0"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7" }
axum = { version = "0.6.18" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "normalize-path"] }
mime_guess = "2.0.4"
axum-server = { version = "0.5.1", features = ["tls-rustls"]}
simplelog = "0.12.1"
log = "0.4.19"
color-eyre = "0.6.2"
